fix mobile alignment

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -88,7 +88,7 @@ h1 {
  }
 
 .image-bubble:hover {
-  width: 40%;
+  width: 45%;
   height: 30%;
 }
 
@@ -113,15 +113,15 @@ h1 {
 }
 
 #three {
-  top: 70%;
+  top: 80%;
 }
 
 #four {
-  top: 90%;
+  top: 110%;
 }
 
 #five {
-  top: 110%;
+  top: 140%;
 }
 
 #six{
